[package]
name = "feox-server"
version = "0.2.0"
edition = "2021"
authors = ["Mehran Toosi"]
license = "Apache-2.0"
description = "High-performance Redis-compatible server for Feox DB"
repository = "https://github.com/mehrantsi/feox-server"
keywords = ["database", "redis", "key-value", "server", "high-performance"]
categories = ["database", "network-programming"]

[[bin]]
name = "feox-server"
path = "src/bin/server.rs"

[dependencies]
feoxdb = "0.4.1"
bytes = "1.9"
libc = "0.2"
nix = { version = "0.29", features = ["net", "sched"] }
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "2.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
itoa = "1.0"
memchr = "2.7"
num_cpus = "1.16"
ctrlc = "3.4"
mio = { version = "1.0", features = ["net", "os-poll"] }

# Optional: for NUMA
hwloc2 = { version = "2.2", optional = true }

[features]
default = []
numa = ["hwloc2"]
